# MidiFile

./: .gitignore  CMakeLists.txt  LICENSE  MidiFile.sln  MidiFile.vcxproj  MidiFile.vcxproj.filters  README.md  main.cpp  stdafx.cpp
MidiFile/: Midi.h  MidiFile.h  MidiHeaderChunk.h  MidiTrackChunk.h
MidiFile/MidiEvents/: MidiEvent.h
MidiFile/MidiEvents/ChannelEvents/: MidiAfterTouchEvent.h  MidiChannelAfterTouchEvent.h  MidiChannelEvent.h  MidiControllerEvent.h  MidiNoteOffEvent.h  MidiNoteOnEvent.h  MidiPitchBendEvent.h  MidiProgramChangeEvent.h
MidiFile/MidiEvents/MetaEvents/: MidiChannelPrefixMetaEvent.h  MidiCopyrightNoticeMetaEvent.h  MidiCuePointMetaEvent.h  MidiEndOfTrackMetaEvent.h  MidiInstrumentNameMetaEvent.h  MidiKeySignatureMetaEvent.h  MidiLyricsMetaEvent.h  MidiMarkerMetaEvent.h  MidiMetaEvent.h  MidiSMPTEOffsetMetaEvent.h  MidiSequenceNumberMetaEvent.h  MidiSequenceTrackNameMetaEvent.h  MidiSequencerSpecificMetaEvent.h  MidiSetTempoMetaEvent.h  MidiTextMetaEvent.h  MidiTimeSignatureMetaEvent.h  MidiUnknownMetaEvent.h
MidiFile/MidiEvents/SysexEvents/: MidiSysexEvent.h
